fixing the width with scrollbars

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -1,4 +1,8 @@
-.cds { 
+.plasmid-map {
+  margin: 0 auto;
+}
+
+.cds {
   fill: black;
 }
 .cds:hover {
